; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-file.c_safe_create_leading_directories_const.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-file.c_safe_create_leading_directories_const.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @safe_create_leading_directories_const(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i8* @xstrdup(i8* %6)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @safe_create_leading_directories(i8* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* @errno, align 4
  store i32 %10, i32* %3, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @free(i8* %11)
  %13 = load i32, i32* %3, align 4
  store i32 %13, i32* @errno, align 4
  %14 = load i32, i32* %5, align 4
  ret i32 %14
}

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i32 @safe_create_leading_directories(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
